# claude-remote

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.atl/: skill-registry.md
.claude/: settings.json
deploy/: render_service.py
src/claude_remote/: _version.py  app.py  cli.py  config.py  version.py
src/claude_remote/api/: errors.py
src/claude_remote/db/: app_settings.py  connection.py  events.py  instances.py  migrations.py  notifications.py  projects.py  push_subscriptions.py  vapid_keys.py
src/claude_remote/routes/: _templates.py  _views.py  auth.py  home.py  hooks.py  push.py  (+9 more)
tests/: conftest.py  test_404.py  test_ansi_html.py  test_app_factory.py  test_app_lifespan.py  test_app_settings.py  test_app_version.py  test_asset_cache_busting.py  test_auth.py  test_auth_gate.py  test_auth_session.py  test_cancel_endpoint.py  test_card_endpoint.py  test_card_link.py  test_cascade_delete.py  test_claude_settings.py  test_cli.py  test_combine_on_send.py  test_config.py  test_connection_pragma.py  test_db_connection.py  test_discovery.py  test_discovery_endpoint.py  test_errors.py  test_event_bus.py  test_event_snippet.py  test_events_repository.py  test_hardening.py  test_health.py  test_home_page.py  test_hooks_endpoint.py  test_image_input_security.py  test_image_input_ui.py  test_image_upload_endpoint.py  test_image_upload_service.py  test_input_endpoint.py  test_instances_endpoints.py  test_instances_repository.py  test_launch_endpoint.py  test_libtmux_capture.py  (+42 more)
tests/integration/: test_tmux_real.py
(+64 files in other folders)
