[project]
name = "claude-remote"
version = "0.0.1"
description = "Claude Code remote companion — monitor and control Claude Code sessions from your phone"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "jinja2>=3.1,<3.2",
    "python-multipart>=0.0.12,<0.1",
    "libtmux>=0.40,<0.41",
    "httpx>=0.27,<0.28",
    "ansi2html>=1.9.2,<2",
    "pywebpush>=1.14",
    "py-vapid>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "respx>=0.21,<0.22",
    "ruff>=0.7,<0.8",
    "pyright>=1.1.380,<1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_remote"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=claude_remote --cov-report=term-missing"
